@@ -7,6 +7,7 @@ amora-server (1.2~svn699-1) unstable; urgency=low
     handling.
   * Bump debhelper compatibility to 9
     - Use "dh_prep" instead of "dh_clean -k"
+  * Cleanup debian/rules a little bit
 
  -- Axel Beckert <abe@debian.org>  Sun, 20 May 2012 00:42:44 +0200
 
